[gd_scene load_steps=10 format=3 uid="uid://vyby26br5i3n"]

[ext_resource type="Script" path="res://Player.gd" id="1_l1asf"]
[ext_resource type="PackedScene" uid="uid://b5b077oga1ay4" path="res://laser.tscn" id="2_ot1oj"]
[ext_resource type="Script" path="res://Camera3D.gd" id="2_strcf"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rneln"]
friction = 0.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_54m31"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6glgw"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxMesh" id="BoxMesh_757db"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6g6ck"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4fsvc"]
radius = 0.1

[node name="Player" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_rneln")
gravity_scale = 3.3
lock_rotation = true
linear_damp = 85.161
script = ExtResource("1_l1asf")

[node name="body_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_54m31")

[node name="body_collision" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_6glgw")

[node name="gun_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.531118, 0, 0, 0, 0.531118, 0, 0, 0, 0.531118, 0, 0.370198, 0)
visible = false
mesh = SubResource("BoxMesh_757db")

[node name="RayCast3D" parent="gun_mesh" instance=ExtResource("2_ot1oj")]
transform = Transform3D(1.88282, 0, 0, 0, -8.23007e-08, -1.88282, 0, 1.88282, -8.23007e-08, 0, 0.0330333, -0.526604)
target_position = Vector3(0, -50, 0)

[node name="gun_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.531118, 0, 0, 0, 0.531118, 0, 0, 0, 0.531118, 0, 0.370198, 0)
visible = false
shape = SubResource("BoxShape3D_6g6ck")
disabled = true

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="TwistPivot/PitchPivot"]
shape = SubResource("SphereShape3D_4fsvc")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 1.78814e-07, 3)
current = true
script = ExtResource("2_strcf")

[node name="back_cam" type="Camera3D" parent="TwistPivot"]
transform = Transform3D(-1, -2.11494e-08, 8.48259e-08, 1.59872e-14, 0.970296, 0.241921, -8.74227e-08, 0.241921, -0.970296, 0, 0.202999, -2.235)

[node name="GroundRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.683314, 0)
target_position = Vector3(0, -0.725, 0)
